Removed grid display from tower selection nav, replacing instead with flex-wrap property. General display now looks good on home page, just need to finetune margins/padding/background colors.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="tower_selection">
             <h2>Select a Tower:</h2>
             <nav>
-                <div class="grid">
+                <div id="primary">
                     <h3>Primary Monkeys</h3>
                     <menu>
                         <li><a href="dart.html">Dart Monkey</a></li>
@@ -53,6 +53,8 @@
                         <li><a href="glue.html">Glue Gunner</a></li>
                         <li><a href="desperado.html">Desperado</a></li>
                     </menu>
+                </div>
+                <div id="military">
                     <h3>Military Monkeys</h3>
                     <menu>
                         <li><a href="sniper.html">Sniper Monkey</a></li>
@@ -63,6 +65,8 @@
                         <li><a href="mortar.html">Mortar Monkey</a></li>
                         <li><a href="dartling.html">Dartling Gunner</a></li>
                     </menu>
+                </div>
+                <div id="magic">
                     <h3>Magic Monkeys</h3>
                     <menu>
                         <li><a href="wizard.html">Wizard Monkey</a></li>
@@ -72,6 +76,8 @@
                         <li><a href="druid.html">Druid</a></li>
                         <li><a href="mermonkey.html">Mermonkey</a></li>
                     </menu>
+                </div>
+                <div id="support">
                     <h3>Support Monkeys</h3>
                     <menu>
                         <li><a href="banana.html">Banana Farm</a></li>
