changed background color of tower blocks, rounded corners, changed text color of links, added border outline to tower block headers using text shadows

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div id="tower_selection">
             <h2>Select a Tower:</h2>
             <nav>
-                <div id="primary">
-                    <h3>Primary Monkeys</h3>
+                <div id="primary" class="tower_container">
+                    <h3 class="tower_type">Primary Monkeys</h3>
                     <menu>
                         <li><a href="dart.html">Dart Monkey</a></li>
                         <li><a href="boomerang.html">Boomerang Monkey</a></li>
@@ -54,8 +54,8 @@
                         <li><a href="desperado.html">Desperado</a></li>
                     </menu>
                 </div>
-                <div id="military">
-                    <h3>Military Monkeys</h3>
+                <div id="military" class="tower_container">
+                    <h3 class="tower_type">Military Monkeys</h3>
                     <menu>
                         <li><a href="sniper.html">Sniper Monkey</a></li>
                         <li><a href="sub.html">Monkey Sub</a></li>
@@ -66,8 +66,8 @@
                         <li><a href="dartling.html">Dartling Gunner</a></li>
                     </menu>
                 </div>
-                <div id="magic">
-                    <h3>Magic Monkeys</h3>
+                <div id="magic" class="tower_container">
+                    <h3 class="tower_type">Magic Monkeys</h3>
                     <menu>
                         <li><a href="wizard.html">Wizard Monkey</a></li>
                         <li><a href="super.html">Super Monkey</a></li>
@@ -77,8 +77,8 @@
                         <li><a href="mermonkey.html">Mermonkey</a></li>
                     </menu>
                 </div>
-                <div id="support">
-                    <h3>Support Monkeys</h3>
+                <div id="support" class="tower_container">
+                    <h3 class="tower_type">Support Monkeys</h3>
                     <menu>
                         <li><a href="banana.html">Banana Farm</a></li>
                         <li><a href="spikefactory.html">Spike Factory</a></li>
