Changed about.html to match header/footer/background formatting; changed bullet point color to match that of links in tower selection blocks

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <header class="container-fluid">
         <h1>About BTD6</h1>
     </header>
-    <main id="about" class="bg-secondary container-fluid text-center">
+    <main id="about" class="container-fluid text-center">
         <div id="picture" class="picture-box">
             <img src="BTD6.png" width="400px" alt="BTD6"/>
         </div>
@@ -32,14 +32,16 @@
             each tower and their upgrades, particularly the ones the game hides from you. Good luck!
         </p>
 
-        <div id="quote" class="bg-light text-dark">"Words are cheap. Show me the code." - Linus Torvalds</div>
+        <div id="quote">"Words are cheap. Show me the code." - Linus Torvalds</div>
+
+        <br>
 
         <div>
             <a href="index.html">Back to Home</a>
         </div>
     </main>
 
-    <footer class="bg-dark text-white-50 container-fluid">
+    <footer class="container-fluid">
         <span>Created by Parker Remund</span>
     </footer>
 </body>
