--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     />
 </head>
 <body class="bg-dark text-light">
-    <header>
+    <header class="container-fluid">
         <h1>BTD6 Cheat Sheet</h1>
     </header>
 
     <main id="home">
         <div id="login" class="container-fluid bg-light text-black">
-            <h1>Welcome to the BTD6 Cheat Sheet!</h1>
+            <h2>Welcome to the BTD6 Cheat Sheet!</h2>
             <form>
                 <div>
                     <span>@</span>
@@ -88,7 +88,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="container-fluid">
         <a href="about.html">About BTD6</h1>
     </footer>
 </body>
