Finished styling for login block, including button styling, added br between buttons and input elements, and text color

--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
     </header>
 
     <main id="home">
-        <div id="login" class="container-fluid bg-light text-black">
+        <div id="login" class="container-fluid text-light">
             <h2>Welcome to the BTD6 Cheat Sheet!</h2>
             <form>
                 <div>
-                    <span>@</span>
+                    <span>Email</span>
                     <input type ="text" placeholder="name@emailname.com"/>
                 </div>
                 <div>
                     <span>Password</span>
                     <input type="password" placeholder="password"/>
                 </div>
-                <button type="submit">Login</button>
-                <button type="submit">Sign Up</button>
+                <br>
+                <button type="submit" class="btn btn-primary">Login</button>
+                <button id="signup" type="submit" class="btn">Sign Up</button>
             </form>
         </div>
 
