Removed all horizontal line elements from all html files; moved all base stat tables from header to main elements in all tower html files

--- a/wizard.html
+++ b/wizard.html
@@ -17,9 +17,13 @@
 </head>
 <body>
     <header>
+        <h1>Wizard Monkey</h1>
+    </header>
+    
+    <main>
         <table>
             <thead>
-                <th>Wizard Monkey (base)</th>
+                <th>Base Stats</th>
             </thead>
             <tbody>
                 <tr>
@@ -61,10 +65,6 @@
             </tbody>
         </table>
 
-        <hr />
-    </header>
-    
-    <main>
         <table>
             <thead>
                 <tr>
@@ -164,7 +164,6 @@
     </main>
 
     <footer>
-        <hr />
         <div>
             <a href="index.html">Back to Home</a>
         </div>
