--- a/alchemist.html
+++ b/alchemist.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Alchemist</h1> 
     </header>
