--- a/beasthandler.html
+++ b/beasthandler.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Beast Handler</h1>
     </header>
