--- a/bomb.html
+++ b/bomb.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Bomb Shooter</h1>       
     </header>
