--- a/buccaneer.html
+++ b/buccaneer.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Monkey Buccaneer</h1>
     </header>
