--- a/dart.html
+++ b/dart.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Dart Monkey</h1>
     </header>
