--- a/glue.html
+++ b/glue.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Glue Gunner</h1>
     </header>
