--- a/ninja.html
+++ b/ninja.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Ninja Monkey</h1>
     </header>
