--- a/spikefactory.html
+++ b/spikefactory.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"
     />
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <h1>Spike Factory</h1>
     </header>
