Changed all headers/footers of tower html files to match color of tower selection blocks on home screen--made said tower selections blocks a class rather than id to enable this

--- a/beasthandler.html
+++ b/beasthandler.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body class="bg-dark text-light">
-    <header>
+    <header class="support tower_heading">
         <h1>Beast Handler</h1>
     </header>
     
@@ -167,7 +167,7 @@
         </table>
     </main>
 
-    <footer>
+    <footer class="support tower_heading">
         <div>
             <a href="index.html">Back to Home</a>
         </div>
