--- a/glue.html
+++ b/glue.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body class="bg-dark text-light">
-    <header>
+    <header class="primary tower_heading">
         <h1>Glue Gunner</h1>
     </header>
     
@@ -175,7 +175,7 @@
         </table>
     </main>
 
-    <footer>
+    <footer class="primary tower_heading">
         <div>
             <a href="index.html">Back to Home</a>
         </div>
