--- a/alchemist.html
+++ b/alchemist.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body class="bg-dark text-light">
-    <header>
+    <header class="magic tower_heading">
         <h1>Alchemist</h1> 
     </header>
     
@@ -167,7 +167,7 @@
         </table>
     </main>
 
-    <footer>
+    <footer class="magic tower_heading">
         <div>
             <a href="index.html">Back to Home</a>
         </div>
