--- a/bomb.html
+++ b/bomb.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body class="bg-dark text-light">
-    <header>
+    <header class="primary tower_heading">
         <h1>Bomb Shooter</h1>       
     </header>
     
@@ -167,7 +167,7 @@
         </table>
     </main>
 
-    <footer>
+    <footer class="primary tower_heading">
         <div>
             <a href="index.html">Back to Home</a>
         </div>
