--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div id="tower_selection">
             <h2 id="tower_heading">Select a Tower:</h2>
             <nav>
-                <div id="primary" class="tower_container">
-                    <h3 class="tower_type">Primary Monkeys</h3>
+                <div class="primary tower_container">
+                    <h3 class="tower_heading">Primary Monkeys</h3>
                     <menu>
                         <li><a href="dart.html">Dart Monkey</a></li>
                         <li><a href="boomerang.html">Boomerang Monkey</a></li>
@@ -52,8 +52,8 @@
                         <li><a href="desperado.html">Desperado</a></li>
                     </menu>
                 </div>
-                <div id="military" class="tower_container">
-                    <h3 class="tower_type">Military Monkeys</h3>
+                <div class="military tower_container">
+                    <h3 class="tower_heading">Military Monkeys</h3>
                     <menu>
                         <li><a href="sniper.html">Sniper Monkey</a></li>
                         <li><a href="sub.html">Monkey Sub</a></li>
@@ -64,8 +64,8 @@
                         <li><a href="dartling.html">Dartling Gunner</a></li>
                     </menu>
                 </div>
-                <div id="magic" class="tower_container">
-                    <h3 class="tower_type">Magic Monkeys</h3>
+                <div class="magic tower_container">
+                    <h3 class="tower_heading">Magic Monkeys</h3>
                     <menu>
                         <li><a href="wizard.html">Wizard Monkey</a></li>
                         <li><a href="super.html">Super Monkey</a></li>
@@ -75,8 +75,8 @@
                         <li><a href="mermonkey.html">Mermonkey</a></li>
                     </menu>
                 </div>
-                <div id="support" class="tower_container">
-                    <h3 class="tower_type">Support Monkeys</h3>
+                <div class="support tower_container">
+                    <h3 class="tower_heading">Support Monkeys</h3>
                     <menu>
                         <li><a href="banana.html">Banana Farm</a></li>
                         <li><a href="spikefactory.html">Spike Factory</a></li>
