--- a/spikefactory.html
+++ b/spikefactory.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body class="bg-dark text-light">
-    <header>
+    <header class="support tower_heading">
         <h1>Spike Factory</h1>
     </header>
     
@@ -163,7 +163,7 @@
         </table>
     </main>
 
-    <footer>
+    <footer class="support tower_heading">
         <div>
             <a href="index.html">Back to Home</a>
         </div>
