--- a/village.html
+++ b/village.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body class="bg-dark text-light">
-    <header>
+    <header class="support tower_heading">
         <h1>Monkey Village</h1>
     </header>
     
@@ -143,7 +143,7 @@
         </table>
     </main>
 
-    <footer>
+    <footer class="support tower_heading">
         <div>
             <a href="index.html">Back to Home</a>
         </div>
