Styled flexboxes/background color/corners of tables in ace.html (will copy over to remaining tower files once 100% finished). Set table layout of upgrade tables to fixed for better readability

--- a/ace.html
+++ b/ace.html
@@ -21,9 +21,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                    <th colspan="2" class="base_head">Base Stats</th>
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -65,102 +67,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Rapid Fire</th>
-                    <th>Lots More Darts</th>
-                    <th>Fighter Plane</th>
-                    <th>Operation: Dart Storm</th>
-                    <th>Sky Shredder</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$450</td>
-                    <td>$550</td>
-                    <td>$1,000</td>
-                    <td>$3,300</td>
-                    <td>$42,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th>Top Upgrade Path</th>
+                        <th>Rapid Fire</th>
+                        <th>Lots More Darts</th>
+                        <th>Fighter Plane</th>
+                        <th>Operation: Dart Storm</th>
+                        <th>Sky Shredder</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$450</td>
+                        <td>$550</td>
+                        <td>$1,000</td>
+                        <td>$3,300</td>
+                        <td>$42,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th>Middle Upgrade Path</th>
+                        <th>Exploding Pineapple</th>
+                        <th>Spy Plane</th>
+                        <th>Bomber Ace</th>
+                        <th>Ground Zero</th>
+                        <th>Tsar Bomba</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$350</td>
+                        <td>$900</td>
+                        <td>$18,000</td>
+                        <td>$26,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Exploding Pineapple</th>
-                    <th>Spy Plane</th>
-                    <th>Bomber Ace</th>
-                    <th>Ground Zero</th>
-                    <th>Tsar Bomba</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$350</td>
-                    <td>$900</td>
-                    <td>$18,000</td>
-                    <td>$26,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Sharper Darts</th>
-                    <th>Centered Path</th>
-                    <th>Neva-Miss Targeting</th>
-                    <th>Spectre</th>
-                    <th>Flying Fortress</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$500</td>
-                    <td>$550</td>
-                    <td>$2,550</td>
-                    <td>$23,400</td>
-                    <td>$85,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th>Bottom Upgrade Path</th>
+                        <th>Sharper Darts</th>
+                        <th>Centered Path</th>
+                        <th>Neva-Miss Targeting</th>
+                        <th>Spectre</th>
+                        <th>Flying Fortress</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$500</td>
+                        <td>$550</td>
+                        <td>$2,550</td>
+                        <td>$23,400</td>
+                        <td>$85,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="military tower_heading">
