--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>BTD6 Cheat Sheet</h1>
     </header>
 
-    <main id="home">
+    <main>
         <div id="login" class="container-fluid text-light">
             <h2>Welcome to the BTD6 Cheat Sheet!</h2>
             <form>
