--- a/ace.html
+++ b/ace.html
@@ -7,15 +7,8 @@
 
     <link rel="stylesheet" href="main.css"/>
     <link rel="stylesheet" href="tower.css">
-
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-        crossorigin="anonymous"
-    />
 </head>
-<body class="bg-dark text-light">
+<body>
     <header class="military tower_heading">
         <h1>Monkey Ace</h1>
     </header>
@@ -71,12 +64,12 @@
             <table class="upgrade_table">
                 <thead>
                     <tr>
-                        <th>Top Upgrade Path</th>
-                        <th>Rapid Fire</th>
-                        <th>Lots More Darts</th>
-                        <th>Fighter Plane</th>
-                        <th>Operation: Dart Storm</th>
-                        <th>Sky Shredder</th>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Rapid Fire</th>
+                        <th class="top_row">Lots More Darts</th>
+                        <th class="top_row">Fighter Plane</th>
+                        <th class="top_row">Operation: Dart Storm</th>
+                        <th class="top_row">Sky Shredder</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -102,12 +95,12 @@
             <table class="upgrade_table">
                 <thead>
                     <tr>
-                        <th>Middle Upgrade Path</th>
-                        <th>Exploding Pineapple</th>
-                        <th>Spy Plane</th>
-                        <th>Bomber Ace</th>
-                        <th>Ground Zero</th>
-                        <th>Tsar Bomba</th>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Exploding Pineapple</th>
+                        <th class="top_row">Spy Plane</th>
+                        <th class="top_row">Bomber Ace</th>
+                        <th class="top_row">Ground Zero</th>
+                        <th class="top_row">Tsar Bomba</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -133,12 +126,12 @@
             <table class="upgrade_table">
                 <thead>
                     <tr>
-                        <th>Bottom Upgrade Path</th>
-                        <th>Sharper Darts</th>
-                        <th>Centered Path</th>
-                        <th>Neva-Miss Targeting</th>
-                        <th>Spectre</th>
-                        <th>Flying Fortress</th>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Sharper Darts</th>
+                        <th class="top_row">Centered Path</th>
+                        <th class="top_row">Neva-Miss Targeting</th>
+                        <th class="top_row">Spectre</th>
+                        <th class="top_row">Flying Fortress</th>
                     </tr>
                 </thead>
                 <tbody>
