--- a/druid.html
+++ b/druid.html
@@ -7,15 +7,8 @@
 
     <link rel="stylesheet" href="main.css"/>
     <link rel="stylesheet" href="tower.css">
-
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-        crossorigin="anonymous"
-    />
 </head>
-<body class="bg-dark text-light">
+<body>
     <header class="magic tower_heading">
         <h1>Druid</h1>
     </header>
