added CSS formatting to alchemist/banana/beasthandler html files via adding relevant class attributes

--- a/alchemist.html
+++ b/alchemist.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -62,102 +64,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Larger Potions</th>
-                    <th>Acidic Mixture Dip</th>
-                    <th>Berserker Brew</th>
-                    <th>Stronger Stimulant</th>
-                    <th>Permanent Brew</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$350</td>
-                    <td>$1,400</td>
-                    <td>$2,850</td>
-                    <td>$48,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Larger Potions</th>
+                        <th class="top_row">Acidic Mixture Dip</th>
+                        <th class="top_row">Berserker Brew</th>
+                        <th class="top_row">Stronger Stimulant</th>
+                        <th class="top_row">Permanent Brew</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$350</td>
+                        <td>$1,400</td>
+                        <td>$2,850</td>
+                        <td>$48,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Stronger Acid</th>
+                        <th class="top_row">Perishing Potions</th>
+                        <th class="top_row">Unstable Concoction</th>
+                        <th class="top_row">Transforming Tonic</th>
+                        <th class="top_row">Total Transformation</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$475</td>
+                        <td>$2,800</td>
+                        <td>$4,200</td>
+                        <td>$45,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Stronger Acid</th>
-                    <th>Perishing Potions</th>
-                    <th>Unstable Concoction</th>
-                    <th>Transforming Tonic</th>
-                    <th>Total Transformation</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$475</td>
-                    <td>$2,800</td>
-                    <td>$4,200</td>
-                    <td>$45,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Faster Throwing</th>
-                    <th>Acid Pool</th>
-                    <th>Lead to Gold</th>
-                    <th>Rubber to Gold</th>
-                    <th>Bloon Master Alchemist</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$650</td>
-                    <td>$450</td>
-                    <td>$1,000</td>
-                    <td>$2,750</td>
-                    <td>$40,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Faster Throwing</th>
+                        <th class="top_row">Acid Pool</th>
+                        <th class="top_row">Lead to Gold</th>
+                        <th class="top_row">Rubber to Gold</th>
+                        <th class="top_row">Bloon Master Alchemist</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$650</td>
+                        <td>$450</td>
+                        <td>$1,000</td>
+                        <td>$2,750</td>
+                        <td>$40,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="magic tower_heading">
