--- a/banana.html
+++ b/banana.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -46,102 +48,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Increased Production</th>
-                    <th>Greater Production</th>
-                    <th>Banana Plantation</th>
-                    <th>Banana Research Facility</th>
-                    <th>Banana Central</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$500</td>
-                    <td>$600</td>
-                    <td>$3,000</td>
-                    <td>$19,000</td>
-                    <td>$115,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Increased Production</th>
+                        <th class="top_row">Greater Production</th>
+                        <th class="top_row">Banana Plantation</th>
+                        <th class="top_row">Banana Research Facility</th>
+                        <th class="top_row">Banana Central</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$500</td>
+                        <td>$600</td>
+                        <td>$3,000</td>
+                        <td>$19,000</td>
+                        <td>$115,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Long Life Bananas</th>
+                        <th class="top_row">Valuable Bananas</th>
+                        <th class="top_row">Monkey Bank</th>
+                        <th class="top_row">IMF Loan</th>
+                        <th class="top_row">Monkey-Nomics</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$800</td>
+                        <td>$3,650</td>
+                        <td>$7,200</td>
+                        <td>$100,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Long Life Bananas</th>
-                    <th>Valuable Bananas</th>
-                    <th>Monkey Bank</th>
-                    <th>IMF Loan</th>
-                    <th>Monkey-Nomics</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$800</td>
-                    <td>$3,650</td>
-                    <td>$7,200</td>
-                    <td>$100,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>EZ Collect</th>
-                    <th>Banana Salvage</th>
-                    <th>Marketplace</th>
-                    <th>Central Market</th>
-                    <th>Monkey Wall Street</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$400</td>
-                    <td>$2,700</td>
-                    <td>$15,000</td>
-                    <td>$70,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">EZ Collect</th>
+                        <th class="top_row">Banana Salvage</th>
+                        <th class="top_row">Marketplace</th>
+                        <th class="top_row">Central Market</th>
+                        <th class="top_row">Monkey Wall Street</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$400</td>
+                        <td>$2,700</td>
+                        <td>$15,000</td>
+                        <td>$70,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="support tower_heading">
