--- a/beasthandler.html
+++ b/beasthandler.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -62,102 +64,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Piranha</th>
-                    <th>Barracuda</th>
-                    <th>Great White Shark</th>
-                    <th>Orca</th>
-                    <th>Megalodon</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$160</td>
-                    <td>$810</td>
-                    <td>$2,010</td>
-                    <td>$12,500</td>
-                    <td>$45,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Piranha</th>
+                        <th class="top_row">Barracuda</th>
+                        <th class="top_row">Great White Shark</th>
+                        <th class="top_row">Orca</th>
+                        <th class="top_row">Megalodon</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$160</td>
+                        <td>$810</td>
+                        <td>$2,010</td>
+                        <td>$12,500</td>
+                        <td>$45,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Microraptor</th>
+                        <th class="top_row">Adasaurus</th>
+                        <th class="top_row">Velociraptor</th>
+                        <th class="top_row">Tyrannosaurus Rex</th>
+                        <th class="top_row">Giganotosaurus</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$175</td>
+                        <td>$830</td>
+                        <td>$2,065</td>
+                        <td>$9,500</td>
+                        <td>$60,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Microraptor</th>
-                    <th>Adasaurus</th>
-                    <th>Velociraptor</th>
-                    <th>Tyrannosaurus Rex</th>
-                    <th>Giganotosaurus</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$175</td>
-                    <td>$830</td>
-                    <td>$2,065</td>
-                    <td>$9,500</td>
-                    <td>$60,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Gyrfalcon</th>
-                    <th>Horned Owl</th>
-                    <th>Golden Eagle</th>
-                    <th>Giant Condor</th>
-                    <th>Pouákai</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$190</td>
-                    <td>$860</td>
-                    <td>$2,120</td>
-                    <td>$9,000</td>
-                    <td>$30,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Gyrfalcon</th>
+                        <th class="top_row">Horned Owl</th>
+                        <th class="top_row">Golden Eagle</th>
+                        <th class="top_row">Giant Condor</th>
+                        <th class="top_row">Pouákai</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$190</td>
+                        <td>$860</td>
+                        <td>$2,120</td>
+                        <td>$9,000</td>
+                        <td>$30,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="support tower_heading">
